tests/recursions/ill-typed/not-a-function.stella
language core;

extend with #fixpoint-combinator;

fn main(n : Bool) -> Nat {
  return fix(n)
}
